--- a/style.css
+++ b/style.css
@@ -321,12 +321,14 @@ gap: var(--gutter, 30px);
 .dotgrid .dot-image{
    position: relative;
    margin-bottom: 15px;
+   /*overflow: hidden;*/
 
 
 
 }
 
-.dotgrid .dot-image> a {
+.dotgrid .dot-image> a,
+ .dotgrid .thumbnail.hover{
    position: absolute;
    top: 0;
    left: 0;
@@ -334,6 +336,50 @@ gap: var(--gutter, 30px);
    bottom: 0;
 
 }
+
+.dotgrid .dot-image > a{
+
+   z-index: 1;
+
+}
+
+.dotgrid .thumbnail.hover{
+
+   opacity: 0;
+   transition: opacity .75s ease,
+                transform 1.1s cubic-bezier(.15, .75, .5, 1) 0s; 
+   backface-visibility: hidden;   
+   transform: translateZ(0);          
+   
+}
+
+.dotgrid .dot-image:hover .thumbnail.hover{
+
+   opacity: 1;
+   transform: scale3d(1.1,1.1,1.1) translateZ(0);
+}
+
+.dotgrid .actions ul{
+
+   display:flex;
+   justify-content: center;
+   gap: 10px;
+}
+
+.dotgrid .actions ul li a {
+font-size: 20px;
+display: flex;
+align-items: center;
+justify-content: center;
+width: 42px;
+height: 42px;
+background-color: var(--white-color);
+border-radius: 50%;
+transition: var(--transition-background), var(--transition-color);
+
+}
+
+
 
 
 
