--- a/style.css
+++ b/style.css
@@ -137,6 +137,43 @@ margin: 0 auto;
 
  }
 
+ .button > [class*=-btn]{
+
+   font-size: var(--fs14);
+   font-weight: var(--fw600);
+   text-decoration: uppercase;
+   padding: 0 30px;
+   display: inline-block;
+   line-height: 42px;
+   border-width: 2px;
+   border-style: solid;
+   transition: var(--transition-background),
+   var(--transition-color),
+   var(--transition-border)
+
+   ;
+ }
+
+ .primary-btn, .secondary-btn{
+
+   border-color: var(--dark-color);
+ }
+
+ .primary-btn:hover,
+ .secondary-btn{
+
+   background-color: var(--dark-color);
+   color: var(--white-color);
+ }
+
+
+ 
+ .secondary-btn:hover{
+
+   background-color: transparent;
+   border-color: var(--dark-color);
+   color: var(--dark-color);
+ }
   /*-------------------------*
 
  #Group Selector
@@ -224,6 +261,33 @@ transition: width .3s, height .3s;
       color: var(--light-color);
    }
 
+   .overlay, 
+   .mobile-menu{
+
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+   }
+.overlay{
+
+   background-color: var(--dark-color);
+   opacity: 0;
+   visibility: hidden;
+   pointer-events: none;
+   z-index: 999;
+   transition: opacity .3s visibility .3s;
+
+
+}
+
+.overlay.active{
+
+   opacity: .75;
+   visibility: visible;
+   pointer-events: all;
+}
   /*-------------------------*
 
  #Header
@@ -291,7 +355,7 @@ pointer-events: auto;
 
  }
 
- .list-inline a, .menu-trigger{
+ .list-inline a, .menu-trigger, .close-trigger{
 
     position: relative;
     font-size: 24px;
@@ -505,6 +569,133 @@ border: 0;
 height: 80px;
 font-size: 18px;
 }
+
+.search-float.active{
+   display: block;
+}
+
+  /*-------------------------*
+
+ #Header: Mobile Menu
+
+ *----------------------------------------*/
+
+.mobile-menu{
+   z-index: 1001;
+   pointer-events: none;
+   visibility: hidden;
+   opacity: 0;
+
+}
+.mobile-menu.active{
+   visibility: visible;
+   opacity: 1;
+
+}
+
+.mobile-menu .wrap{
+   position: relative;
+   max-width: calc(100% - 40px);
+   width: 360px;
+   height: 100%;
+   background-color: var(--white-color);
+   pointer-events: auto;
+
+}
+
+.mobile-menu .close-trigger,
+.mobile-menu .child-trigger{
+position: absolute;
+top: 0;
+right: -40px;
+width: 40px;
+height: 40px;
+color: var(--primary-color);
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.mobile-menu .main-menu{
+height: 100%;
+padding: 0 20px;
+display: flex;
+flex-direction: column;
+
+}
+
+.mobile-menu nav > ul {
+
+   padding: 20px 0;
+
+}
+
+.mobile-menu nav > ul > li > a {
+
+   position: relative;
+   padding: 12px 0 ;
+   font-weight: 500;
+   transition: var(--transition-color);
+
+}
+.mobile-menu nav li :where(li, a){
+   display: block;
+}
+.mobile-menu nav > ul > li > a:hover{
+
+   color: var(--grey-color);
+}
+.mobile-menu .child-trigger{
+
+   color: var(--dark-color);
+   font-size: 20px;
+   right: 0;
+   top: 50%;
+   transform: translateY(-50%);
+   border-radius: 50%;
+   transition: var(--transition-background);
+   z-index: 1;
+
+}
+
+.mobile-menu .child-trigger:hover{
+
+   background-color: var(--light-color);
+}
+
+.mobile-menu nav .sub-menu{
+
+   padding-left:15px ;
+   max-height: 0;
+   overflow: hidden;
+   visibility: hidden;
+   transition: .3s ease-in-out;
+}
+
+.mobile-menu nav li.active .sub-menu{
+max-height: 1000px;
+visibility: visible;
+
+
+}
+
+.mobile-menu .button{
+
+   margin-top: auto;
+   padding: 20px 0 40px;
+   text-align: center;
+
+
+}
+
+.mobile-menu .button a{
+
+   display: block;
+   margin-top: 10px;
+
+}
+
 
 
  @media (min-width: 992px){
