--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@ padding-bottom: 20px;
 
 }
 .scrollto .wrapper::-webkit-scrollbar-thumb{
-  --border-color:var(var(var(--white-color)));
+  --border-color:var(--white-color);
   background-color: var(--light-color);
   border: 3px solid var(--border-color);
   border-radius: 20px;
@@ -576,7 +576,7 @@ form.search{
    position: relative;
 }
 
-form.search :where(i){
+form.search :where(i, .submit){
 
    position: absolute;
    left: 0;
@@ -602,10 +602,44 @@ form.search i{
 
 }
 
-form.search :where(i:last-child){
+form.search :where(.submit, i:last-child){
 left: auto;
 right: 0;
 
+}
+
+
+
+form.search .submit {
+
+   border: 0;
+   background-color: transparent;
+   color: transparent;
+   width: 50px;
+   height: 100%;
+   right: 0;
+   z-index: 1;
+   cursor: pointer;
+}
+
+form :where(input, textarea, select){
+
+   font-size: var(--fs14);
+   border: 1px solid var(--light-color);
+   outline: 0;
+   background-color: transparent;
+   padding: 10px 20px;
+   transition: border .3s ;
+}
+
+form :where(input, textarea, select):focus{
+border-color: var(--dark-color);
+
+}
+
+form :where(input, textarea, select)::placeholder{
+
+   color: var(--grey-color);
 }
 
 .inner-header .search .input{
@@ -875,7 +909,8 @@ transition-delay: .5s;
  
  */
 
- .page-home main > div:not(.slider){
+ .page-home main > div:not(.slider, .frominsta),
+ .inner-footer{
 
    padding: 100px 0;
  }
@@ -896,13 +931,13 @@ margin-bottom: 60px;
    --grid-col:260px
  }
 
- :is(.guide) .dot-image .thumbnail{
+ :is(.guide, .fromblog) .dot-image .thumbnail{
 position: relative;
 opacity: unset;
 
  }
 
- .guide .dot-image .thumbnail img{
+ :is(.guide, .fromblog) .dot-image .thumbnail img{
 
    width:100% ;
  }
@@ -920,7 +955,7 @@ padding: 10px 0;
    line-height: 1.4;
  }
 
- .guide .wrapper .item {
+ .scrollto .wrapper .item {
 
    width: 290px;
    scroll-snap-align:start ;
@@ -1063,8 +1098,180 @@ padding: 10px 0;
  }
 
 
+ /*  
+ __#BANNER
+ 
+ */
+
+ .banner{
+
+   background-color: var(--light-color);
+   background-image: url(assets/assets/banner.png);
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position-x: right;
+   background-origin: border-box;
+ }
+
+ .banner .content {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   gap: 30px;
+ }
+
+ .banner .content span{
+   font-size: var(--fs14);
+   text-transform: uppercase;
+
+ }
+
+ .banner h3{
+   --fs-max:80px
+ }
 
 
+  /*  
+ __#FROM BLOG
+ 
+ */
+
+ .fromblog .dot-title{
+
+   --primary-font: var (var(--second-font));
+   --fs14: 18px;
+   --fw600:400;
+   margin-top: 15px;
+
+ }
+
+ .fromblog .dot-info > a {
+display: inline-block;
+font-size: 12px;
+text-transform: uppercase;
+border: 1px solid var(--light-color);
+color: var(--grey-color);
+padding: 1px 10px;
+transition: var(--transition-background),
+               var(--transition-color),
+               var(--transition-border);
+
+ }
+
+ .fromblog .dot-info > a :hover{
+background-color: var(--dark-color);
+color: var(--white-color);
+border-color: var(--dark-color);
+
+ }
+
+ .fromblog .button{
+
+   text-align: center;
+   margin-top: 40px;
+ }
+
+   /*  
+ __#FROM INSTAGRAM
+ 
+ */
+
+ .frominsta .container.wide{
+   --mx-width:none;
+   --gutter:0;
+ }
+ .frominsta .dotgrid .wrapper{
+   background-color: var(--flashwhite-color);
+ }
+ .frominsta img{
+   width: 100%;
+ }
+ .frominsta .dot-image{
+   margin:0 ;
+ }
+ .frominsta .actions{
+font-size: 20px;
+width: 50px;
+height: 50px;
+background-color: var(--white-color);
+display: flex;
+align-items: center;
+justify-content: center;
+border-radius: 50%;
+margin: 0 auto;
+pointer-events: none;
+ }
+
+ .frominsta .scrollto .wrapper::-webkit-scrollbar-thumb{
+   --border-color:var(--flashwhite-color);
+   background-color: var(--grey-color);
+ }
+
+   /*  
+ __#FOOTER
+ 
+ */
+
+ .inner-footer{
+
+   background-color: var(--flashwhite-color);
+   line-height: 1.4;
+   padding-bottom: 30px;
+ }
+
+ .inner-footer .wrap > div{
+
+   display: flex;
+   flex-flow: wrap;
+   justify-content: space-between;
+   gap: 60px;
+ }
+
+ .inner-footer .subscribe {
+
+   width: 100%;
+ }
+
+ .inner-footer .top .subscribe h3{
+
+   margin-bottom: 20px;
+ }
+
+ .inner-footer p {
+
+   font-size: var(--fs14);
+ }
+
+ .inner-footer .search{
+max-width: 400px;
+
+ }
+
+ .inner-footer .search .input{
+font-size: var(--fs14);
+border:  2px solid var(--dark-color);
+
+ }
+
+
+ .inner-footer .bottom{
+
+   padding-top: 40px;
+   padding-bottom: 40px;
+
+
+ }
+
+
+
+
+
+
+@media(min-width:768px){
+   .banner{
+      background-size: contain;
+   }
+}
 
 
 
@@ -1174,6 +1381,22 @@ color: var(--white-color);
    border-color: var(--dark-color);
    
    
+    }
+
+    .scrollto .wrapper{
+      display: grid;
+      padding: 0;
+      overflow: unset;
+      scroll-snap-type: unset;
+      overscroll-behavior-inline:unset ;
+    }
+    .scrollto .wrapper .item {
+      width: unset;
+    }
+
+    .inner-footer .wrap > div {
+
+      flex-flow: nowrap;
     }
 
 
