--- a/style.css
+++ b/style.css
@@ -276,7 +276,8 @@ transition: width .3s, height .3s;
 
    .overlay, 
    .mobile-menu,
-   .data-popup{
+   .data-popup,
+   .cart-menu{
 
       position: fixed;
       top: 0;
@@ -660,14 +661,17 @@ font-size: 18px;
 
  *----------------------------------------*/
 
-.mobile-menu{
+.mobile-menu,
+.cart-menu
+{
    z-index: 1001;
    pointer-events: none;
    visibility: hidden;
    opacity: 0;
 
 }
-.mobile-menu.active{
+.mobile-menu.active,
+.cart-menu.active{
    visibility: visible;
    opacity: 1;
 
@@ -675,7 +679,8 @@ font-size: 18px;
 
 
 
-.mobile-menu .wrap{
+.mobile-menu .wrap,
+.cart-menu .wrap{
    position: relative;
    max-width: calc(100% - 40px);
    width: 360px;
@@ -687,13 +692,15 @@ font-size: 18px;
 
 }
 
-.mobile-menu.active .wrap{
+.mobile-menu.active .wrap,
+.cart-menu.active .wrap{
 transform: translateX(0);
 
 }
 
 .mobile-menu .close-trigger,
-.mobile-menu .child-trigger{
+.mobile-menu .child-trigger,
+.cart-menu .close-trigger{
 position: absolute;
 top: 0;
 right: -40px;
@@ -706,7 +713,8 @@ justify-content: center;
 
 }
 
-.mobile-menu .main-menu{
+.mobile-menu .main-menu,
+.cart-menu .cart-list{
 height: 100%;
 padding: 0 20px;
 display: flex;
@@ -1089,12 +1097,18 @@ padding: 10px 0;
    color: var(--white-color);
  }
 
- .sort-data{
+ .bycats .dotgrid .wrapper{
+   --grid-col:211px
+ }
+
+ .sort-data,
+ .data-popup{
 
    display: none;
    animation: var(--fade);
  }
- .sort-data.active{
+ .sort-data.active,
+ .data-popup.active{
    display: block;
  }
 
@@ -1956,6 +1970,111 @@ form .button button{
 
 
 
+ /*  
+ __#Floating Cart
+ 
+ */
+
+
+
+ .cart-menu .wrap {
+
+   float: right;
+   --transX: 100%;
+ }
+
+ .cart-menu .close-trigger{
+   right: auto;
+   left: -40px;
+
+ }
+
+ .cart-menu .wrapper{
+   height: 100%;
+   display: flex;
+   flex-direction: column;
+ }
+
+ .cart-menu .cart-header{
+   padding: 30px 0;
+ }
+
+ .product-list li{
+   margin-bottom: 30px;
+ }
+
+ .product-list .grouping{
+   position:relative;
+   float: left;
+   padding-left: 45px;
+ }
+ .product-list .quantity .contol{
+
+   background-color: var(--flashwhite-color);
+   border-radius: 5px;
+ }
+
+ .product-list .quantity .contol > * {
+
+   height: 30px;
+   border: 0;
+   outline: 0;
+   text-align: center;
+   background-color: transparent;
+ }
+
+ .product-list .quantity button{
+
+   font-size: 20px;
+   line-height: initial;
+   width: 100%;
+   cursor: pointer;
+ }
+
+ .product-list .quantity{
+   position: absolute;
+   left: 0;
+   top: 0;
+   max-width: 30px;
+ }
+
+ .product-list .thumbnail{
+   width: 70px;
+   margin-right: 20px;
+ }
+
+ .product-list .variats{
+
+   position: relative;
+   display: flex;
+   flex-direction: column;
+   gap: 2px;
+ }
+
+ .product-list .variats h4{
+   line-height: initial;
+   margin-bottom: 5px;
+   white-space: nowrap;
+   overflow: hidden;
+   text-overflow: ellipsis;
+ }
+
+ .product-list .variats > div {
+
+   font-size: var(--fs14);
+   line-height: 1.4;
+ }
+
+ .product-list .item-remove{
+   position: absolute;
+   right: 0;
+   bottom: 0;
+ }
+
+
+
+
+ 
 
 
 
@@ -1997,7 +2116,8 @@ left: 0;
       display: none;
    }
 .product .profile .comment{
-   padding-left: 92px;
+   padding-left
+   : 92px;
 }
 
 
