--- a/style.css
+++ b/style.css
@@ -180,7 +180,12 @@ margin: 0 auto;
    font-size: clamp(30px, -0.875em + 8.333vw, var(--fs-max, 40px));
  }
 
-.grey-color{
+ .grey-link{
+   color: inherit;
+   transition: var(--transition-color);
+ }
+
+.grey-color, .grey-link:hover{
    color: var(--grey-color);
 }
 
@@ -1995,6 +2000,12 @@ form .button button{
    flex-direction: column;
  }
 
+ .cart-menu .cart-outer > .wrapper{
+   height: 100vh;
+   padding: 0;
+   overflow-y: auto;
+ }
+
  .cart-menu .cart-header{
    padding: 30px 0;
  }
@@ -2008,13 +2019,13 @@ form .button button{
    float: left;
    padding-left: 45px;
  }
- .product-list .quantity .contol{
+ .product-list .quantity .control{
 
    background-color: var(--flashwhite-color);
    border-radius: 5px;
  }
 
- .product-list .quantity .contol > * {
+ .product-list .quantity .control > * {
 
    height: 30px;
    border: 0;
@@ -2065,12 +2076,164 @@ form .button button{
    line-height: 1.4;
  }
 
- .product-list .item-remove{
+ .product-list .variats .item-remove{
    position: absolute;
    right: 0;
    bottom: 0;
  }
 
+ .product-list .item-remove{
+   color: var(--red-color);
+   background-color: #ff47571a;
+   width: 20px;
+   height: 20px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   border-radius: 5px;
+   transition: var(--transition-color), var(--transition-background);
+ }
+
+ .product-list .item-remove:hover{
+   color: var(--light-color);
+   background-color: var(--dark-color);
+ }
+
+ .cart-menu .cart-footer{
+
+margin: 0 -20px;
+padding: 20px;
+background-color: var(--flashwhite-color);
+margin-top: auto;
+ }
+
+ .cart-footer form {
+
+   position: relative;
+   margin-bottom: 20px;
+ }
+
+ .cart-footer form .input{
+   line-height: 34px;
+   border: 0;
+   border-radius: 7px;
+   background-color: var(--white-color);
+ }
+
+ .cart-footer form .submit{
+   position: absolute;
+   top: 10px;
+   right: 10px;
+   max-width: 90px;
+   height: 34px;
+   line-height: 1;
+   background-color: var(--grey-color);
+   color: var(--white-color);
+   padding: 0;
+   border-radius: 7px;
+   cursor: pointer;
+   transition: var(--transition-background);
+ }
+ .cart-footer form .submit:hover{
+   background-color: var(--dark-color);
+ }
+
+ .cart-footer .math-pricing ul li{
+
+   position: relative;
+   display: flex;
+   justify-content: space-between;
+ }
+.cart-footer .math-pricing ul ul{
+   width: 100%;
+}
+.cart-footer .math-pricing ul li span:not(.value),
+.cart-footer .math-pricing ul li label
+{
+   color: var(--grey-color);
+}
+.cart-footer .math-pricing ul ul li:not(:first-child){
+   padding-left: 20px;
+}
+
+.cart-footer .math-pricing .total{
+   font-size: 18px;
+   font-weight: var(--fw600);
+   margin-top: 10px;
+   padding-top: 10px;
+   border-top: 1px solid var(--light-color);
+}
+.cart-footer .button{
+   text-align: center;
+}
+
+.cart-footer .button .secondary-btn{
+   display: block;
+   margin: 20px 0 10px;
+
+}
+
+.cart-footer .button .secondary-btn{
+   background-color: var(--primary-color);
+   border: 0;
+   text-transform: capitalize;
+   line-height: 54px;
+   border-radius: 7px;
+   min-width: 240px;
+}
+
+
+.cart-footer .button .secondary-btn:hover{
+
+   background-color: var(--grey-color);
+   color: var(--white-color);
+}
+
+input.checker {
+   position:relative;
+padding: 5px;
+margin: 0 5px 0 2px ;
+cursor: pointer;
+}
+
+input.checker::after, input.checker::before{
+   content: '';
+   display: block;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+}
+
+input.checker::before{
+   width: 16px;
+   height: 16px;
+   transform: translate(-50%, -50%);
+   background-color: var(--white-color);
+   border: 1px solid var(--grey-color);
+   border-radius: 50%;
+   transition: var(--transition-border);
+}
+
+input.checker::after{
+   width: 10px;
+   height: 10px;
+   background-color: var(--dark-color);
+   transform: translate(-50%, -50%) scale(0);
+   border-radius: 50%;
+   transition: var(--transition-transform);
+}
+
+input.checker:checked::before{
+   border-color: var(--dark-color);
+}
+
+input.checker:checked::after{transform: translate(-50%, -50%) scale(1);
+
+}
+
+.cart-menu .product-list > ,.wrapper{
+   max-height: 400px;
+}
 
 
 
@@ -2112,9 +2275,9 @@ left: 0;
 
    }
 
-   .custom-pagination{
+  /* .custom-pagination{
       display: none;
-   }
+   }*/
 .product .profile .comment{
    padding-left
    : 92px;
@@ -2253,7 +2416,7 @@ color: var(--white-color);
     }
 
     .scrollto .wrapper{
-     /*display: grid;*/
+     display: grid;
       padding: 0;
       overflow: unset;
       scroll-snap-type: unset;
@@ -2322,7 +2485,7 @@ color: var(--white-color);
       left: -100px;
       height: 100%;
    }
-   .product.dotgrid .image{
+   .product .dotgrid .image{
 
       overflow: unset;
    }
