--- a/style.css
+++ b/style.css
@@ -282,7 +282,8 @@ transition: width .3s, height .3s;
    .overlay, 
    .mobile-menu,
    .data-popup,
-   .cart-menu{
+   .cart-menu,
+   .sidebar{
 
       position: fixed;
       top: 0;
@@ -425,7 +426,8 @@ color: var(--light-color);
  }
  
 
- .header-left .list-inline{
+ .header-left .list-inline,
+ .sidebar .widget input[type='checkbox']{
 
 
     display: none;
@@ -667,7 +669,8 @@ font-size: 18px;
  *----------------------------------------*/
 
 .mobile-menu,
-.cart-menu
+.cart-menu,
+.sidebar
 {
    z-index: 1001;
    pointer-events: none;
@@ -676,7 +679,8 @@ font-size: 18px;
 
 }
 .mobile-menu.active,
-.cart-menu.active{
+.cart-menu.active,
+.sidebar.active{
    visibility: visible;
    opacity: 1;
 
@@ -685,7 +689,8 @@ font-size: 18px;
 
 
 .mobile-menu .wrap,
-.cart-menu .wrap{
+.cart-menu .wrap,
+.sidebar > .wrap{
    position: relative;
    max-width: calc(100% - 40px);
    width: 360px;
@@ -698,14 +703,16 @@ font-size: 18px;
 }
 
 .mobile-menu.active .wrap,
-.cart-menu.active .wrap{
+.cart-menu.active .wrap,
+.sidebar.active > .wrap{
 transform: translateX(0);
 
 }
 
 .mobile-menu .close-trigger,
 .mobile-menu .child-trigger,
-.cart-menu .close-trigger{
+.cart-menu .close-trigger,
+.sidebar .close-trigger{
 position: absolute;
 top: 0;
 right: -40px;
@@ -719,7 +726,8 @@ justify-content: center;
 }
 
 .mobile-menu .main-menu,
-.cart-menu .cart-list{
+.cart-menu .cart-list,
+.sidebar-content{
 height: 100%;
 padding: 0 20px;
 display: flex;
@@ -2235,9 +2243,190 @@ input.checker:checked::after{transform: translate(-50%, -50%) scale(1);
    max-height: 400px;
 }
 
+/*-------------------- *
+        #CATEGORY PAGE
+ *----------------------*/
 
 
- 
+ /* --------------------
+        #Sidebar
+  ---------------------- */
+ .sidebar-title{
+   font-size: 26px;
+   padding-top: 100px;
+ }
+
+ .sidebar .widget {
+
+   margin: 20px 0;
+ }
+
+ .sidebar label,
+ .sidebar .price-range{
+
+   display: flex;
+   justify-content: space-between;
+   cursor: pointer;
+ }
+
+ .sidebar label span {
+
+   font-weight: var(--fw600);
+ }
+
+ .sidebar label i {
+
+   font-size: 26px;
+   width: 30px;
+   height: 30px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   transition: var(--transition-transform);
+ }
+
+ .sidebar .list-block ul{
+   padding-left: 15px;
+   margin-top: 20px;
+   height: 230px;
+ }
+
+ input[type='range']{
+   -webkit-appearance: none;
+   width: 100%;
+ }
+ input[type='range']:focus{
+   outline: none;
+ }
+
+ input[type='range']::-webkit-slider-runnable-track{
+   width: 100%;
+   height: 5px;
+   cursor: pointer;
+   background-color: var(--light-color);
+   box-shadow: none;
+   border: 0;
+ }
+
+ input[type='range']::-webkit-slider-thumb{
+   z-index: 2;
+   position: relative;
+   height: 18px;
+   width: 14px;
+   background-color: var(--grey-color);
+   cursor: pointer;
+   -webkit-appearance: none;
+   margin-top: -7px;
+ }
+
+ .sidebar .price-range{
+   font-size: 18px;
+ }
+
+ .sidebar .widget .accord{
+   padding-right: 15px;
+   max-height: 0;
+   opacity: 0;
+   visibility: hidden;
+   overflow: hidden;
+   transition: all .3s ease;
+ }
+
+ .sidebar .widget input:checked ~ div{
+
+   max-height: 1000px;
+   opacity: 1;
+   visibility: visible;
+ }
+
+ .sidebar .widget input:checked ~ label i {
+
+   transform: rotate(180deg);
+ }
+
+ .sidebar .widget :where(.accord > div, .range-track) {
+
+   padding-top: 20px;
+ }
+
+
+ /* --------------------
+        #Product Category
+  ---------------------- */
+
+.category-content .button{
+   margin: 60px 0 100px;
+   text-align: center;
+}
+
+.category-content :where(.sorter, .right){
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.category-content .sorter
+{
+margin: 0 0 30px;
+
+}
+
+.category-content .sorter > a {
+
+   display:  flex;
+   align-items:  center;
+   justify-content: center;
+   height: 44px;
+   width: 44px;
+   background-color: var(--dark-color);
+   color: var(--white-color);
+   border-radius: 50%;
+   position: fixed;
+   top: calc(50% - 20px);
+   left: 0;
+   z-index: 10;
+   opacity: .5;
+   transition: opacity .3s, var(--transition-transform);
+}
+
+.category-content .sorter > a:hover{
+   transform: scale(1.2);
+   opacity: 1;
+}
+
+.category-content .opt-trigger{
+   gap: 5px;
+   margin-right: 15px;
+   line-height: 1.4;
+}
+.category-content .opt-trigger span{
+   font-size: var(--fs14);
+   font-weight: var(--fw600);
+}
+.category-content .opt-trigger i{
+   font-size: 24px;
+}
+
+.category-content .sort-list ul{
+   width: 180px;
+}
+
+.category-content .right .list-inline a{
+
+   display: flex;
+   padding: 7px;
+   background-color: var(--flashwhite-color);
+   margin-left: 10px;
+   border-radius: 3px;
+}
+
+.category-content .left span{
+   display: none;
+}
+
+.category-content .dotgrid .wrapper{
+   --grid-col:221px;
+}
 
 
 
@@ -2303,6 +2492,10 @@ left: 0;
    .product nav ul {
       justify-content: center;
    }
+
+   .category-content .left span{
+      display: block;
+   }
 }
 
 
@@ -2313,7 +2506,9 @@ left: 0;
 
 
 
-.menu-trigger{
+.menu-trigger,
+.sidebar .close-trigger,
+.category-content .sorter > a {
 display: none;
 
 
@@ -2415,7 +2610,7 @@ color: var(--white-color);
    
     }
 
-    .scrollto .wrapper{
+    .scrollto .wrapper:not(.initial){
      display: grid;
       padding: 0;
       overflow: unset;
@@ -2429,6 +2624,24 @@ color: var(--white-color);
     .inner-footer .wrap > div {
 
       flex-flow: nowrap;
+    }
+
+    /* category */
+
+    .page-category .content{
+
+      display: grid;
+      grid-template-columns: 1fr 4fr;
+      gap: 60px;
+    }
+    .sidebar-title,
+    .sidebar-content{
+      padding: 0;
+    }
+
+    .sidebar,
+    .sidebar > .wrap{
+      all: unset;
     }
 
 
