--- a/style.css
+++ b/style.css
@@ -2439,6 +2439,92 @@ margin: 0 0 30px;
    --grid-col:221px;
 }
 
+/*-------------------- *
+        #CART PAGE
+ *----------------------*/
+
+ .page-cart .product-list{
+   position: relative;
+ }
+
+ .has-bg::before, .has-bg::after{
+
+   /* content: ''; */
+   position: absolute;
+   height: 100%;
+   z-index: -1;
+   /* background-color: var(--flashwhite-color); */
+ }
+
+ .has-bg::before{
+
+   top: auto;
+   left: 0;
+   width: 50%;
+ }
+
+ .has-bg::after{
+
+   top: 0;
+   right: 100%;
+   width: 100%;
+ }
+
+.page-cart .product-list li,
+.page-cart .cart-total .grouping {
+
+   display: grid;
+   margin: 0;
+ 
+}
+
+.cart-table .product-list .table-title{
+   font-size: var(--fs14);
+   font-weight: var(--fw600);
+   text-transform: uppercase;
+}
+
+.cart-table .product-list li .grouping{
+   --grid-col:75px;
+padding: 30px 0;
+align-items: center;}
+
+.cart-table .product-list .grouping:last-child{
+   border-top: 1px solid var(--flashwhite-color);
+   text-align: center;
+   --gutter:0;
+}
+
+.cart-table .product-list .thumbnail{
+   position: relative;
+   width: 120px;
+   height: 120px;
+   margin: 0;
+}
+
+.cart-table .product-list .quantity{
+   position: relative;
+   max-width: 100px;
+   margin: 0 auto;
+}
+
+.cart-table .product-list .control{
+   display: flex;
+   align-items: center;
+   padding: 0;
+   margin: 0 auto;
+}
+
+.cart-table .product-list ,.thumbnail,
+.cart-table .item-remove{
+   margin-left: auto;
+   margin-right: auto;
+}
+
+.cart-table .product-list :where(.table-title, .price){
+
+   display: none;
+}
 
 
 
@@ -2507,6 +2593,18 @@ left: 0;
    .category-content .left span{
       display: block;
    }
+
+   .page-cart .product-list li {
+
+      grid-template-columns: 1fr 1fr;
+   }
+
+   .has-bg::before, .has-bg::after{
+
+      content: '';
+     
+      background-color: var(--flashwhite-color);
+    }
 }
 
 
