--- a/style.css
+++ b/style.css
@@ -1283,10 +1283,11 @@ border:  2px solid var(--dark-color);
 
 
  .inner-footer .bottom,
- .page-single .carousel{
+ .page-single .carousel,
+ .cart-total .grouping > div{
 
    padding-top: 40px;
-   padding-bottom: 40px;
+   padding-bottom: 60px;
 
 
  }
@@ -2028,7 +2029,7 @@ form .button button{
    margin-bottom: 30px;
  }
 
- .product-list .grouping{
+ .product-list li .grouping{
    position:relative;
    float: left;
    padding-left: 45px;
@@ -2187,17 +2188,20 @@ margin-top: auto;
 
 }
 
-.cart-footer .button .secondary-btn{
+.cart-footer .button .secondary-btn,
+.cart-total .button a.secondary-btn{
    background-color: var(--primary-color);
    border: 0;
    text-transform: capitalize;
    line-height: 54px;
    border-radius: 7px;
    min-width: 240px;
+   text-align: center;
 }
 
 
-.cart-footer .button .secondary-btn:hover{
+.cart-footer .button .secondary-btn:hover,
+.cart-total .button a.secondary-btn:hover{
 
    background-color: var(--grey-color);
    color: var(--white-color);
@@ -2526,6 +2530,80 @@ align-items: center;}
    display: none;
 }
 
+.cart-total .has-bg::before, 
+.has-bg::after{
+   content: '';
+   background-color: var(--dark-color);
+   width: 100%;
+   bottom: auto;
+   top: 0;
+}
+
+.cart-total .has-bg::before{
+   right: 100%;
+   left: auto;
+
+}
+.cart-total .has-bg::after{
+   left: 100%;
+   
+}
+
+.cart-total .product-list{
+   background-color: var(--dark-color);
+   color: var(--white-color);
+}
+
+.cart-total .grouping{
+   font-weight: var(--fw600);
+   text-transform: uppercase;
+}
+.cart-total .add-note
+{
+   text-align: center;
+}
+
+.cart-total .add-note textarea{
+   max-width: 300px;
+   border-color: transparent;
+   outline: 0;
+   color: var(--white-color);
+   background-color: transparent;
+   text-transform: uppercase;
+   padding: 15px;
+   border-radius: 10px;
+   transition: var(--transition-border);
+}
+
+
+.cart-total .add-note :is(textarea:hover, textarea:focus, :not(:placeholder-shown)){
+
+   border-color: var(--grey-color);
+}
+
+.cart-total .add-note textarea:not(:placeholder-shown){
+   text-transform: capitalize;
+   font-weight: initial;
+}
+
+.cart-total .sub-total{
+   text-align: left;
+   display: flex;
+   flex-direction: column;
+   gap: 24px;
+   max-width: 400px;
+   margin: 0 auto;
+}
+
+.cart-total .sub-total-price{
+   padding-left: 30px;
+   font-size: 26px;
+}
+
+.cart-total .sub-terms{
+   font-weight: initial;
+   text-transform: capitalize;
+}
 
 
  @media(min-width:481px){
@@ -2590,11 +2668,13 @@ left: 0;
       justify-content: center;
    }
 
-   .category-content .left span{
+   .cart-table .product-list :where(.table-title, .price),
+ .category-content .left span{
       display: block;
    }
 
-   .page-cart .product-list li {
+   .page-cart .product-list li,
+   .page-cart .cart-total .grouping {
 
       grid-template-columns: 1fr 1fr;
    }
@@ -2604,6 +2684,11 @@ left: 0;
       content: '';
      
       background-color: var(--flashwhite-color);
+    }
+
+    .cart-total .sub-total{
+      padding-left: 10%;
+      margin: 0;
     }
 }
 
